--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ديبلا - سوق الذهب</title>
+  <title>دبله - سوق الذهب</title>
 
   <!-- Arabic Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
